--- a/virtual_ut/Main.storyboard
+++ b/virtual_ut/Main.storyboard
@@ -30,6 +30,9 @@
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Eks-bh-xKr" kind="modal" id="TEb-3q-bGi"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XmV-Vs-Nwe">
                                 <rect key="frame" x="95" y="102" width="97" height="30"/>
@@ -49,7 +52,105 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AQz-uA-lbH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="177" y="53"/>
+            <point key="canvasLocation" x="-677" y="-917"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="YqE-hy-ODU">
+            <objects>
+                <viewController id="DwG-BO-wG1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="W3z-65-F3X"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hwe-pF-Ous"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dGW-GP-fca">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" id="SNZ-eR-6Bv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XhH-XS-nxz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1268" y="-1648"/>
+        </scene>
+        <!--View Controller - Item 1-->
+        <scene sceneID="x52-tA-Q7v">
+            <objects>
+                <viewController id="l3t-sb-A9b" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2jS-8V-Sti"/>
+                        <viewControllerLayoutGuide type="bottom" id="eCf-ws-lwa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QjP-ne-GlY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="hlT-iJ-RR6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7kv-bv-K4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1268" y="-943"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ZAP-Xj-Soh">
+            <objects>
+                <tabBarController definesPresentationContext="YES" id="Eks-bh-xKr" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="OCQ-Lq-TGt"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Nwd-Jl-R1P">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="l3t-sb-A9b" kind="relationship" relationship="viewControllers" id="IZy-H3-hTx"/>
+                        <segue destination="cT6-7V-mzi" kind="relationship" relationship="viewControllers" id="dZd-22-G2F"/>
+                        <segue destination="DwG-BO-wG1" kind="relationship" relationship="viewControllers" id="xKY-UQ-J2z"/>
+                        <segue destination="8J6-uW-wqb" kind="relationship" relationship="viewControllers" id="cbJ-Zg-6Ia"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Glv-PK-7QV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-90" y="-917"/>
+        </scene>
+        <!--View Controller - Item 2-->
+        <scene sceneID="VW8-yh-A18">
+            <objects>
+                <viewController id="cT6-7V-mzi" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ixm-hF-g7f"/>
+                        <viewControllerLayoutGuide type="bottom" id="2AI-ZW-q3q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2S0-Da-lRv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="xgl-2s-488"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yoX-Mw-yS7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1276" y="-245"/>
+        </scene>
+        <!--View Controller - Item-->
+        <scene sceneID="xAY-We-NLN">
+            <objects>
+                <viewController id="8J6-uW-wqb" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HMU-Ho-hla"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hsn-n8-FBp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0fG-Op-TnZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="tJE-dF-2ZE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QG4-8s-KMZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1276" y="490"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
